--- a/Views/Movie/Random.cshtml
+++ b/Views/Movie/Random.cshtml
@@ -1,9 +1,31 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.ViewModels.RandomMovieViewModel
 
 @{
-    ViewBag.Title = "Random";
+    ViewBag.Title = "Random movie";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var className = Model.Customers.Count == 0 ? "null" : "popular";
 }
 
-<h2>@Model.Name</h2>
+<!-- Adding a class name logic to the view. -->
+
+@*
+
+    It is also possible to add
+    multiple line comments using this technique.
+
+*@
+
+<h2 class="@className">@Model.Movie.Name</h2>
+
+@if (Model.Customers.Count == 0)
+{
+    <p>No one has rented this movie before.</p>
+}
+
+<ul>
+    @foreach (var customer in Model.Customers)
+    {
+        <li>@customer.Name</li>
+    }
+</ul>
 
