--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -12,6 +12,7 @@
     <thead>
     <tr>
         <th>Customer</th>
+        <th>Discount Rate</th>
     </tr>
     </thead>
 
@@ -19,6 +20,7 @@
     {
         <tr>
             <td>@Html.ActionLink(@customer.Name, "ViewCustomer", new {customer.Id})</td>
+            <td>@customer.MembershipType.DiscountRate</td>
         </tr>
     }
 </table>
