--- a/Views/Customer/ViewCustomer.cshtml
+++ b/Views/Customer/ViewCustomer.cshtml
@@ -6,3 +6,13 @@
 }
 
 <h2>@Model.Name</h2>
+<ul>
+    @if (!String.IsNullOrWhiteSpace(Model.MembershipType.Name))
+    {
+        <li>@Model.MembershipType.Name</li>
+    }
+    @if (Model.BirthDate.HasValue)
+    {
+        <li>@Model.BirthDate</li>
+    }
+</ul>
