Adding additional movie data

--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -17,7 +17,7 @@
     @foreach (var movie in Model)
     {
         <tr>
-            <td>@movie.Name</td>
+            <td>@Html.ActionLink(@movie.Name, "details", new { movie.Id})</td>
         </tr>
     }
 </table>
