--- a/Views/Customer/Add.cshtml
+++ b/Views/Customer/Add.cshtml
@@ -9,9 +9,20 @@
 
 @using (Html.BeginForm())
 {
-    <div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Name)
-        @Html.DisplayFor(m => m.Name, new { @class = "form-control"})
+        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.BirthDate)
+        @Html.TextBoxFor(m => m.BirthDate, new { @class = "form-control" })
+    </div>
+
+    <div class="checkbox">
+        <label>
+            @Html.CheckBoxFor(m => m.IsSubscribedToNewsLetter, new { @class = "form-control" }) Is Subscribed?
+        </label>
     </div>
 }
 
