--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -19,7 +19,7 @@
     @foreach (var customer in Model)
     {
         <tr>
-            <td>@Html.ActionLink(@customer.Name, "ViewCustomer", new {customer.Id})</td>
+            <td>@Html.ActionLink(@customer.Name, "Edit", new {customer.Id})</td>
             <td>@customer.MembershipType.Name</td>
         </tr>
     }
