--- a/Views/Customer/Add.cshtml
+++ b/Views/Customer/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.CustomerViewModel
+﻿@model Vidly.Models.CustomerFormViewModel
 
 @{
     ViewBag.Title = "Add";
@@ -16,7 +16,7 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDate)
-        @Html.TextBoxFor(m => m.Customer.BirthDate, new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.BirthDate, "{0:d MMM yyyy}" ,new { @class = "form-control" })
     </div>
 
     <div class="checkbox">
