--- a/Views/Customer/Add.cshtml
+++ b/Views/Customer/Add.cshtml
@@ -9,6 +9,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(m => m.Customer.Id)
+
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
