--- a/Views/Customer/Add.cshtml
+++ b/Views/Customer/Add.cshtml
@@ -18,7 +18,12 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDate)
-        @Html.TextBoxFor(m => m.Customer.BirthDate, "{0:d MMM yyyy}" ,new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.MembershipTypeId)
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "id", "name"), " ", new { @class = "form-control" })
     </div>
 
     <div class="checkbox">
@@ -27,9 +32,10 @@
         </label>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.MembershipTypeId)
-        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "id", "name"), " " , new { @class = "form-control" })
+    <div>
+        <br/>
     </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
 }
 
