--- a/Views/Customer/Add.cshtml
+++ b/Views/Customer/Add.cshtml
@@ -14,11 +14,13 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
 
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.BirthDate)
         @Html.TextBoxFor(m => m.Customer.BirthDate, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.BirthDate)
     </div>
 
     <div class="form-group">
@@ -28,7 +30,7 @@
 
     <div class="checkbox">
         <label>
-            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter, new { @class = "form-control" }) Is Subscribed?
+            @Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Is Subscribed?
         </label>
     </div>
 
