--- a/Views/Movie/Details.cshtml
+++ b/Views/Movie/Details.cshtml
@@ -7,8 +7,8 @@
 
 <h2>@Model.Name</h2>
 <ul>
-    <li>@Model.Genre</li>
-    <li>@Model.DateAdded</li>
-    <li>@Model.ReleaseDate</li>    
-    <li>@Model.StockCount</li>    
+    <li>Genre        : @Model.Genre</li>
+    <li>Date Added   : @Model.DateAdded</li>
+    <li>Release Date : @Model.ReleaseDate</li>    
+    <li>Stock Level  : @Model.StockCount</li>    
 </ul>
