--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -7,6 +7,8 @@
 
 <h2>Customers</h2>
 
+@Html.ActionLink("New Customer", "Add", null, new{ @class = "btn btn-primary"})
+
 <table class="table table-striped table-bordered">
     <thead>
     <tr>
