--- a/Views/Movie/Index.cshtml
+++ b/Views/Movie/Index.cshtml
@@ -7,10 +7,13 @@
 
 <h2>Movies</h2>
 
+@Html.ActionLink("New Movie", "Add", null, new{ @Class="btn btn-primary"})
+
 <table class="table table-striped table-bordered">
     <thead>
         <tr>
-            <th>Movies</th>
+            <th>Movie Name</th>
+            <th>Genre</th>
         </tr>
     </thead>
 
@@ -18,6 +21,7 @@
     {
         <tr>
             <td>@Html.ActionLink(@movie.Name, "details", new { movie.Id})</td>
+            <td>@movie.Genre</td>
         </tr>
     }
 </table>
