--- a/Views/Movie/Add.cshtml
+++ b/Views/Movie/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.Models.MovieViewModel
 
 @{
     ViewBag.Title = "Add";
@@ -7,5 +7,33 @@
 
 <h2>Add a customer</h2>
 
-@using (Html.BeginForm("Add", "Customer"))
+@using (Html.BeginForm("Add", "Movie"))
 {
+    @Html.ValidationSummary(false, "Please review the following validation errors.")
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Movie.Name)
+        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Name)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Movie.ReleaseDate)
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.ReleaseDate)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Movie.Genre)
+        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(@Model.Genres, "Id", "Name"), "", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.ReleaseDate)
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.Movie.StockCount)
+        @Html.TextBoxFor(m => m.Movie.StockCount, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.StockCount)
+    </div>
+
+    <button type="submit" class="btn btn-primary">Save</button>
+}
