--- a/Views/Customer/Index.cshtml
+++ b/Views/Customer/Index.cshtml
@@ -9,11 +9,12 @@
 
 @Html.ActionLink("New Customer", "Add", null, new{ @class = "btn btn-primary"})
 
-<table class="table table-striped table-bordered">
+<table id="customers" class="table table-striped table-bordered">
     <thead>
     <tr>
         <th>Customer</th>
         <th>Membership Type</th>
+        <th>Delete</th>
     </tr>
     </thead>
 
@@ -22,6 +23,18 @@
         <tr>
             <td>@Html.ActionLink(@customer.Name, "Edit", new {customer.Id})</td>
             <td>@customer.MembershipType.Name</td>
+            <td><button class="btn-link js-delete">Delete</button></td>
         </tr>
     }
 </table>
+
+@section scripts 
+{
+    <script>
+        $(document).ready(function() {
+            $("#customers js-delete").On("click", function() {
+                
+            });
+        });
+    </script>
+}
